parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> lines
Rule 1     lines -> last SEMICOLON
Rule 2     lines -> last SEMICOLON lines
Rule 3     last -> codestmt
Rule 4     last -> output
Rule 5     last -> list
Rule 6     last -> var_assign
Rule 7     last -> var_declare
Rule 8     last -> if_exp
Rule 9     last -> empty
Rule 10    list -> list_declare
Rule 11    list -> list_assign
Rule 12    list -> list_access
Rule 13    list -> list_funcs
Rule 14    list_declare -> NAME FATARROW SLBRAC SRBRAC
Rule 15    list_assign -> NAME EQUAL SLBRAC result SRBRAC
Rule 16    list_access -> NAME SLBRAC INT SRBRAC
Rule 17    list_funcs -> list_pop
Rule 18    list_funcs -> list_push
Rule 19    list_funcs -> list_slice
Rule 20    list_funcs -> list_index
Rule 21    list_pop -> NAME DOT POP LBRAC INT RBRAC
Rule 22    list_push -> NAME DOT PUSH LBRAC INT RBRAC
Rule 23    list_push -> NAME DOT PUSH LBRAC FLOAT RBRAC
Rule 24    list_push -> NAME DOT PUSH LBRAC CHAR RBRAC
Rule 25    list_push -> NAME DOT PUSH LBRAC STRING RBRAC
Rule 26    list_push -> NAME DOT PUSH LBRAC BOOL RBRAC
Rule 27    list_slice -> NAME DOT SLICE LBRAC sliceval RBRAC
Rule 28    sliceval -> INT COLON
Rule 29    sliceval -> COLON INT
Rule 30    sliceval -> INT COLON INT
Rule 31    sliceval -> COLON
Rule 32    list_index -> NAME DOT INDEX LBRAC INT RBRAC
Rule 33    if_exp -> if_statement
Rule 34    if_exp -> if_statement else_statement
Rule 35    if_exp -> if_statement elif_stmt
Rule 36    if_exp -> if_statement elif_stmt else_statement
Rule 37    if_statement -> IF LBRAC codestmt RBRAC block
Rule 38    else_statement -> ELSE block
Rule 39    elif_stmt -> else_if_statement
Rule 40    elif_stmt -> else_if_statement elif_stmt
Rule 41    else_if_statement -> ELSEIF LBRAC codestmt RBRAC block
Rule 42    block -> CLBRAC codeblock CRBRAC
Rule 43    codeblock -> code SEMICOLON
Rule 44    codeblock -> code SEMICOLON codeblock
Rule 45    code -> codestmt
Rule 46    code -> var_assign
Rule 47    code -> var_declare
Rule 48    code -> output
Rule 49    code -> list
Rule 50    code -> if_exp
Rule 51    output -> PRINT LBRAC result RBRAC
Rule 52    result -> printstmt
Rule 53    result -> printstmt COMMA result
Rule 54    result -> list_access
Rule 55    result -> list_access COMMA result
Rule 56    result -> list_funcs
Rule 57    result -> list_funcs COMMA result
Rule 58    printstmt -> codestmt
Rule 59    var_assign -> NAME EQUAL codestmt
Rule 60    var_declare -> TYPE NAME
Rule 61    var_declare -> TYPE NAME EQUAL codestmt
Rule 62    empty -> <empty>
Rule 63    codestmt -> MINUS codestmt
Rule 64    codestmt -> codestmt PLUS codestmt
Rule 65    codestmt -> codestmt MINUS codestmt
Rule 66    codestmt -> codestmt MULTIPLY codestmt
Rule 67    codestmt -> codestmt DIVIDE codestmt
Rule 68    codestmt -> codestmt MOD codestmt
Rule 69    codestmt -> codestmt POWER codestmt
Rule 70    codestmt -> list_funcs PLUS codestmt
Rule 71    codestmt -> list_funcs MINUS codestmt
Rule 72    codestmt -> list_funcs MULTIPLY codestmt
Rule 73    codestmt -> list_funcs DIVIDE codestmt
Rule 74    codestmt -> list_funcs MOD codestmt
Rule 75    codestmt -> list_funcs POWER codestmt
Rule 76    codestmt -> codestmt PLUS list_funcs
Rule 77    codestmt -> codestmt MINUS list_funcs
Rule 78    codestmt -> codestmt MULTIPLY list_funcs
Rule 79    codestmt -> codestmt DIVIDE list_funcs
Rule 80    codestmt -> codestmt MOD list_funcs
Rule 81    codestmt -> codestmt POWER list_funcs
Rule 82    codestmt -> codestmt LESSTHAN codestmt
Rule 83    codestmt -> codestmt GREATERTHAN codestmt
Rule 84    codestmt -> codestmt LESSEQUAL codestmt
Rule 85    codestmt -> codestmt GREATEREQUAL codestmt
Rule 86    codestmt -> codestmt NOTEQUAL codestmt
Rule 87    codestmt -> codestmt EQUALEQUAL codestmt
Rule 88    codestmt -> codestmt AND codestmt
Rule 89    codestmt -> codestmt OR codestmt
Rule 90    codestmt -> LBRAC codestmt RBRAC
Rule 91    codestmt -> NOT codestmt
Rule 92    codestmt -> codestmt INCR
Rule 93    codestmt -> codestmt DECR
Rule 94    codestmt -> NAME
Rule 95    codestmt -> BOOL
Rule 96    codestmt -> CHAR
Rule 97    codestmt -> STRING
Rule 98    codestmt -> INT
Rule 99    codestmt -> FLOAT

Terminals, with rules where they appear

AND                  : 88
BOOL                 : 26 95
CHAR                 : 24 96
CLBRAC               : 42
COLON                : 28 29 30 31
COMMA                : 53 55 57
CRBRAC               : 42
DECR                 : 93
DIVIDE               : 67 73 79
DOT                  : 21 22 23 24 25 26 27 32
ELSE                 : 38
ELSEIF               : 41
EQUAL                : 15 59 61
EQUALEQUAL           : 87
FATARROW             : 14
FLOAT                : 23 99
GREATEREQUAL         : 85
GREATERTHAN          : 83
IF                   : 37
INCR                 : 92
INDEX                : 32
INT                  : 16 21 22 28 29 30 30 32 98
LBRAC                : 21 22 23 24 25 26 27 32 37 41 51 90
LESSEQUAL            : 84
LESSTHAN             : 82
MINUS                : 63 65 71 77
MOD                  : 68 74 80
MULTIPLY             : 66 72 78
NAME                 : 14 15 16 21 22 23 24 25 26 27 32 59 60 61 94
NOT                  : 91
NOTEQUAL             : 86
OR                   : 89
PLUS                 : 64 70 76
POP                  : 21
POWER                : 69 75 81
PRINT                : 51
PUSH                 : 22 23 24 25 26
RBRAC                : 21 22 23 24 25 26 27 32 37 41 51 90
SEMICOLON            : 1 2 43 44
SLBRAC               : 14 15 16
SLICE                : 27
SRBRAC               : 14 15 16
STRING               : 25 97
TYPE                 : 60 61
error                : 

Nonterminals, with rules where they appear

block                : 37 38 41
code                 : 43 44
codeblock            : 42 44
codestmt             : 3 37 41 45 58 59 61 63 64 64 65 65 66 66 67 67 68 68 69 69 70 71 72 73 74 75 76 77 78 79 80 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 91 92 93
elif_stmt            : 35 36 40
else_if_statement    : 39 40
else_statement       : 34 36
empty                : 9
if_exp               : 8 50
if_statement         : 33 34 35 36
last                 : 1 2
lines                : 2 0
list                 : 5 49
list_access          : 12 54 55
list_assign          : 11
list_declare         : 10
list_funcs           : 13 56 57 70 71 72 73 74 75 76 77 78 79 80 81
list_index           : 20
list_pop             : 17
list_push            : 18
list_slice           : 19
output               : 4 48
printstmt            : 52 53
result               : 15 51 53 55 57
sliceval             : 27
var_assign           : 6 46
var_declare          : 7 47

Parsing method: LALR

state 0

    (0) S' -> . lines
    (1) lines -> . last SEMICOLON
    (2) lines -> . last SEMICOLON lines
    (3) last -> . codestmt
    (4) last -> . output
    (5) last -> . list
    (6) last -> . var_assign
    (7) last -> . var_declare
    (8) last -> . if_exp
    (9) last -> . empty
    (63) codestmt -> . MINUS codestmt
    (64) codestmt -> . codestmt PLUS codestmt
    (65) codestmt -> . codestmt MINUS codestmt
    (66) codestmt -> . codestmt MULTIPLY codestmt
    (67) codestmt -> . codestmt DIVIDE codestmt
    (68) codestmt -> . codestmt MOD codestmt
    (69) codestmt -> . codestmt POWER codestmt
    (70) codestmt -> . list_funcs PLUS codestmt
    (71) codestmt -> . list_funcs MINUS codestmt
    (72) codestmt -> . list_funcs MULTIPLY codestmt
    (73) codestmt -> . list_funcs DIVIDE codestmt
    (74) codestmt -> . list_funcs MOD codestmt
    (75) codestmt -> . list_funcs POWER codestmt
    (76) codestmt -> . codestmt PLUS list_funcs
    (77) codestmt -> . codestmt MINUS list_funcs
    (78) codestmt -> . codestmt MULTIPLY list_funcs
    (79) codestmt -> . codestmt DIVIDE list_funcs
    (80) codestmt -> . codestmt MOD list_funcs
    (81) codestmt -> . codestmt POWER list_funcs
    (82) codestmt -> . codestmt LESSTHAN codestmt
    (83) codestmt -> . codestmt GREATERTHAN codestmt
    (84) codestmt -> . codestmt LESSEQUAL codestmt
    (85) codestmt -> . codestmt GREATEREQUAL codestmt
    (86) codestmt -> . codestmt NOTEQUAL codestmt
    (87) codestmt -> . codestmt EQUALEQUAL codestmt
    (88) codestmt -> . codestmt AND codestmt
    (89) codestmt -> . codestmt OR codestmt
    (90) codestmt -> . LBRAC codestmt RBRAC
    (91) codestmt -> . NOT codestmt
    (92) codestmt -> . codestmt INCR
    (93) codestmt -> . codestmt DECR
    (94) codestmt -> . NAME
    (95) codestmt -> . BOOL
    (96) codestmt -> . CHAR
    (97) codestmt -> . STRING
    (98) codestmt -> . INT
    (99) codestmt -> . FLOAT
    (51) output -> . PRINT LBRAC result RBRAC
    (10) list -> . list_declare
    (11) list -> . list_assign
    (12) list -> . list_access
    (13) list -> . list_funcs
    (59) var_assign -> . NAME EQUAL codestmt
    (60) var_declare -> . TYPE NAME
    (61) var_declare -> . TYPE NAME EQUAL codestmt
    (33) if_exp -> . if_statement
    (34) if_exp -> . if_statement else_statement
    (35) if_exp -> . if_statement elif_stmt
    (36) if_exp -> . if_statement elif_stmt else_statement
    (62) empty -> .
    (17) list_funcs -> . list_pop
    (18) list_funcs -> . list_push
    (19) list_funcs -> . list_slice
    (20) list_funcs -> . list_index
    (14) list_declare -> . NAME FATARROW SLBRAC SRBRAC
    (15) list_assign -> . NAME EQUAL SLBRAC result SRBRAC
    (16) list_access -> . NAME SLBRAC INT SRBRAC
    (37) if_statement -> . IF LBRAC codestmt RBRAC block
    (21) list_pop -> . NAME DOT POP LBRAC INT RBRAC
    (22) list_push -> . NAME DOT PUSH LBRAC INT RBRAC
    (23) list_push -> . NAME DOT PUSH LBRAC FLOAT RBRAC
    (24) list_push -> . NAME DOT PUSH LBRAC CHAR RBRAC
    (25) list_push -> . NAME DOT PUSH LBRAC STRING RBRAC
    (26) list_push -> . NAME DOT PUSH LBRAC BOOL RBRAC
    (27) list_slice -> . NAME DOT SLICE LBRAC sliceval RBRAC
    (32) list_index -> . NAME DOT INDEX LBRAC INT RBRAC

    MINUS           shift and go to state 10
    LBRAC           shift and go to state 12
    NOT             shift and go to state 13
    NAME            shift and go to state 14
    BOOL            shift and go to state 15
    CHAR            shift and go to state 16
    STRING          shift and go to state 17
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    PRINT           shift and go to state 20
    TYPE            shift and go to state 24
    SEMICOLON       reduce using rule 62 (empty -> .)
    IF              shift and go to state 30

    lines                          shift and go to state 1
    last                           shift and go to state 2
    codestmt                       shift and go to state 3
    output                         shift and go to state 4
    list                           shift and go to state 5
    var_assign                     shift and go to state 6
    var_declare                    shift and go to state 7
    if_exp                         shift and go to state 8
    empty                          shift and go to state 9
    list_funcs                     shift and go to state 11
    list_declare                   shift and go to state 21
    list_assign                    shift and go to state 22
    list_access                    shift and go to state 23
    if_statement                   shift and go to state 25
    list_pop                       shift and go to state 26
    list_push                      shift and go to state 27
    list_slice                     shift and go to state 28
    list_index                     shift and go to state 29

state 1

    (0) S' -> lines .



state 2

    (1) lines -> last . SEMICOLON
    (2) lines -> last . SEMICOLON lines

    SEMICOLON       shift and go to state 31


state 3

    (3) last -> codestmt .
    (64) codestmt -> codestmt . PLUS codestmt
    (65) codestmt -> codestmt . MINUS codestmt
    (66) codestmt -> codestmt . MULTIPLY codestmt
    (67) codestmt -> codestmt . DIVIDE codestmt
    (68) codestmt -> codestmt . MOD codestmt
    (69) codestmt -> codestmt . POWER codestmt
    (76) codestmt -> codestmt . PLUS list_funcs
    (77) codestmt -> codestmt . MINUS list_funcs
    (78) codestmt -> codestmt . MULTIPLY list_funcs
    (79) codestmt -> codestmt . DIVIDE list_funcs
    (80) codestmt -> codestmt . MOD list_funcs
    (81) codestmt -> codestmt . POWER list_funcs
    (82) codestmt -> codestmt . LESSTHAN codestmt
    (83) codestmt -> codestmt . GREATERTHAN codestmt
    (84) codestmt -> codestmt . LESSEQUAL codestmt
    (85) codestmt -> codestmt . GREATEREQUAL codestmt
    (86) codestmt -> codestmt . NOTEQUAL codestmt
    (87) codestmt -> codestmt . EQUALEQUAL codestmt
    (88) codestmt -> codestmt . AND codestmt
    (89) codestmt -> codestmt . OR codestmt
    (92) codestmt -> codestmt . INCR
    (93) codestmt -> codestmt . DECR

    SEMICOLON       reduce using rule 3 (last -> codestmt .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    MULTIPLY        shift and go to state 34
    DIVIDE          shift and go to state 35
    MOD             shift and go to state 36
    POWER           shift and go to state 37
    LESSTHAN        shift and go to state 38
    GREATERTHAN     shift and go to state 39
    LESSEQUAL       shift and go to state 40
    GREATEREQUAL    shift and go to state 41
    NOTEQUAL        shift and go to state 42
    EQUALEQUAL      shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45
    INCR            shift and go to state 46
    DECR            shift and go to state 47


state 4

    (4) last -> output .

    SEMICOLON       reduce using rule 4 (last -> output .)


state 5

    (5) last -> list .

    SEMICOLON       reduce using rule 5 (last -> list .)


state 6

    (6) last -> var_assign .

    SEMICOLON       reduce using rule 6 (last -> var_assign .)


state 7

    (7) last -> var_declare .

    SEMICOLON       reduce using rule 7 (last -> var_declare .)


state 8

    (8) last -> if_exp .

    SEMICOLON       reduce using rule 8 (last -> if_exp .)


state 9

    (9) last -> empty .

    SEMICOLON       reduce using rule 9 (last -> empty .)


state 10

    (63) codestmt -> MINUS . codestmt
    (63) codestmt -> . MINUS codestmt
    (64) codestmt -> . codestmt PLUS codestmt
    (65) codestmt -> . codestmt MINUS codestmt
    (66) codestmt -> . codestmt MULTIPLY codestmt
    (67) codestmt -> . codestmt DIVIDE codestmt
    (68) codestmt -> . codestmt MOD codestmt
    (69) codestmt -> . codestmt POWER codestmt
    (70) codestmt -> . list_funcs PLUS codestmt
    (71) codestmt -> . list_funcs MINUS codestmt
    (72) codestmt -> . list_funcs MULTIPLY codestmt
    (73) codestmt -> . list_funcs DIVIDE codestmt
    (74) codestmt -> . list_funcs MOD codestmt
    (75) codestmt -> . list_funcs POWER codestmt
    (76) codestmt -> . codestmt PLUS list_funcs
    (77) codestmt -> . codestmt MINUS list_funcs
    (78) codestmt -> . codestmt MULTIPLY list_funcs
    (79) codestmt -> . codestmt DIVIDE list_funcs
    (80) codestmt -> . codestmt MOD list_funcs
    (81) codestmt -> . codestmt POWER list_funcs
    (82) codestmt -> . codestmt LESSTHAN codestmt
    (83) codestmt -> . codestmt GREATERTHAN codestmt
    (84) codestmt -> . codestmt LESSEQUAL codestmt
    (85) codestmt -> . codestmt GREATEREQUAL codestmt
    (86) codestmt -> . codestmt NOTEQUAL codestmt
    (87) codestmt -> . codestmt EQUALEQUAL codestmt
    (88) codestmt -> . codestmt AND codestmt
    (89) codestmt -> . codestmt OR codestmt
    (90) codestmt -> . LBRAC codestmt RBRAC
    (91) codestmt -> . NOT codestmt
    (92) codestmt -> . codestmt INCR
    (93) codestmt -> . codestmt DECR
    (94) codestmt -> . NAME
    (95) codestmt -> . BOOL
    (96) codestmt -> . CHAR
    (97) codestmt -> . STRING
    (98) codestmt -> . INT
    (99) codestmt -> . FLOAT
    (17) list_funcs -> . list_pop
    (18) list_funcs -> . list_push
    (19) list_funcs -> . list_slice
    (20) list_funcs -> . list_index
    (21) list_pop -> . NAME DOT POP LBRAC INT RBRAC
    (22) list_push -> . NAME DOT PUSH LBRAC INT RBRAC
    (23) list_push -> . NAME DOT PUSH LBRAC FLOAT RBRAC
    (24) list_push -> . NAME DOT PUSH LBRAC CHAR RBRAC
    (25) list_push -> . NAME DOT PUSH LBRAC STRING RBRAC
    (26) list_push -> . NAME DOT PUSH LBRAC BOOL RBRAC
    (27) list_slice -> . NAME DOT SLICE LBRAC sliceval RBRAC
    (32) list_index -> . NAME DOT INDEX LBRAC INT RBRAC

    MINUS           shift and go to state 10
    LBRAC           shift and go to state 12
    NOT             shift and go to state 13
    NAME            shift and go to state 50
    BOOL            shift and go to state 15
    CHAR            shift and go to state 16
    STRING          shift and go to state 17
    INT             shift and go to state 18
    FLOAT           shift and go to state 19

    codestmt                       shift and go to state 48
    list_funcs                     shift and go to state 49
    list_pop                       shift and go to state 26
    list_push                      shift and go to state 27
    list_slice                     shift and go to state 28
    list_index                     shift and go to state 29

state 11

    (70) codestmt -> list_funcs . PLUS codestmt
    (71) codestmt -> list_funcs . MINUS codestmt
    (72) codestmt -> list_funcs . MULTIPLY codestmt
    (73) codestmt -> list_funcs . DIVIDE codestmt
    (74) codestmt -> list_funcs . MOD codestmt
    (75) codestmt -> list_funcs . POWER codestmt
    (13) list -> list_funcs .

    PLUS            shift and go to state 51
    MINUS           shift and go to state 52
    MULTIPLY        shift and go to state 53
    DIVIDE          shift and go to state 54
    MOD             shift and go to state 55
    POWER           shift and go to state 56
    SEMICOLON       reduce using rule 13 (list -> list_funcs .)


state 12

    (90) codestmt -> LBRAC . codestmt RBRAC
    (63) codestmt -> . MINUS codestmt
    (64) codestmt -> . codestmt PLUS codestmt
    (65) codestmt -> . codestmt MINUS codestmt
    (66) codestmt -> . codestmt MULTIPLY codestmt
    (67) codestmt -> . codestmt DIVIDE codestmt
    (68) codestmt -> . codestmt MOD codestmt
    (69) codestmt -> . codestmt POWER codestmt
    (70) codestmt -> . list_funcs PLUS codestmt
    (71) codestmt -> . list_funcs MINUS codestmt
    (72) codestmt -> . list_funcs MULTIPLY codestmt
    (73) codestmt -> . list_funcs DIVIDE codestmt
    (74) codestmt -> . list_funcs MOD codestmt
    (75) codestmt -> . list_funcs POWER codestmt
    (76) codestmt -> . codestmt PLUS list_funcs
    (77) codestmt -> . codestmt MINUS list_funcs
    (78) codestmt -> . codestmt MULTIPLY list_funcs
    (79) codestmt -> . codestmt DIVIDE list_funcs
    (80) codestmt -> . codestmt MOD list_funcs
    (81) codestmt -> . codestmt POWER list_funcs
    (82) codestmt -> . codestmt LESSTHAN codestmt
    (83) codestmt -> . codestmt GREATERTHAN codestmt
    (84) codestmt -> . codestmt LESSEQUAL codestmt
    (85) codestmt -> . codestmt GREATEREQUAL codestmt
    (86) codestmt -> . codestmt NOTEQUAL codestmt
    (87) codestmt -> . codestmt EQUALEQUAL codestmt
    (88) codestmt -> . codestmt AND codestmt
    (89) codestmt -> . codestmt OR codestmt
    (90) codestmt -> . LBRAC codestmt RBRAC
    (91) codestmt -> . NOT codestmt
    (92) codestmt -> . codestmt INCR
    (93) codestmt -> . codestmt DECR
    (94) codestmt -> . NAME
    (95) codestmt -> . BOOL
    (96) codestmt -> . CHAR
    (97) codestmt -> . STRING
    (98) codestmt -> . INT
    (99) codestmt -> . FLOAT
    (17) list_funcs -> . list_pop
    (18) list_funcs -> . list_push
    (19) list_funcs -> . list_slice
    (20) list_funcs -> . list_index
    (21) list_pop -> . NAME DOT POP LBRAC INT RBRAC
    (22) list_push -> . NAME DOT PUSH LBRAC INT RBRAC
    (23) list_push -> . NAME DOT PUSH LBRAC FLOAT RBRAC
    (24) list_push -> . NAME DOT PUSH LBRAC CHAR RBRAC
    (25) list_push -> . NAME DOT PUSH LBRAC STRING RBRAC
    (26) list_push -> . NAME DOT PUSH LBRAC BOOL RBRAC
    (27) list_slice -> . NAME DOT SLICE LBRAC sliceval RBRAC
    (32) list_index -> . NAME DOT INDEX LBRAC INT RBRAC

    MINUS           shift and go to state 10
    LBRAC           shift and go to state 12
    NOT             shift and go to state 13
    NAME            shift and go to state 50
    BOOL            shift and go to state 15
    CHAR            shift and go to state 16
    STRING          shift and go to state 17
    INT             shift and go to state 18
    FLOAT           shift and go to state 19

    codestmt                       shift and go to state 57
    list_funcs                     shift and go to state 49
    list_pop                       shift and go to state 26
    list_push                      shift and go to state 27
    list_slice                     shift and go to state 28
    list_index                     shift and go to state 29

state 13

    (91) codestmt -> NOT . codestmt
    (63) codestmt -> . MINUS codestmt
    (64) codestmt -> . codestmt PLUS codestmt
    (65) codestmt -> . codestmt MINUS codestmt
    (66) codestmt -> . codestmt MULTIPLY codestmt
    (67) codestmt -> . codestmt DIVIDE codestmt
    (68) codestmt -> . codestmt MOD codestmt
    (69) codestmt -> . codestmt POWER codestmt
    (70) codestmt -> . list_funcs PLUS codestmt
    (71) codestmt -> . list_funcs MINUS codestmt
    (72) codestmt -> . list_funcs MULTIPLY codestmt
    (73) codestmt -> . list_funcs DIVIDE codestmt
    (74) codestmt -> . list_funcs MOD codestmt
    (75) codestmt -> . list_funcs POWER codestmt
    (76) codestmt -> . codestmt PLUS list_funcs
    (77) codestmt -> . codestmt MINUS list_funcs
    (78) codestmt -> . codestmt MULTIPLY list_funcs
    (79) codestmt -> . codestmt DIVIDE list_funcs
    (80) codestmt -> . codestmt MOD list_funcs
    (81) codestmt -> . codestmt POWER list_funcs
    (82) codestmt -> . codestmt LESSTHAN codestmt
    (83) codestmt -> . codestmt GREATERTHAN codestmt
    (84) codestmt -> . codestmt LESSEQUAL codestmt
    (85) codestmt -> . codestmt GREATEREQUAL codestmt
    (86) codestmt -> . codestmt NOTEQUAL codestmt
    (87) codestmt -> . codestmt EQUALEQUAL codestmt
    (88) codestmt -> . codestmt AND codestmt
    (89) codestmt -> . codestmt OR codestmt
    (90) codestmt -> . LBRAC codestmt RBRAC
    (91) codestmt -> . NOT codestmt
    (92) codestmt -> . codestmt INCR
    (93) codestmt -> . codestmt DECR
    (94) codestmt -> . NAME
    (95) codestmt -> . BOOL
    (96) codestmt -> . CHAR
    (97) codestmt -> . STRING
    (98) codestmt -> . INT
    (99) codestmt -> . FLOAT
    (17) list_funcs -> . list_pop
    (18) list_funcs -> . list_push
    (19) list_funcs -> . list_slice
    (20) list_funcs -> . list_index
    (21) list_pop -> . NAME DOT POP LBRAC INT RBRAC
    (22) list_push -> . NAME DOT PUSH LBRAC INT RBRAC
    (23) list_push -> . NAME DOT PUSH LBRAC FLOAT RBRAC
    (24) list_push -> . NAME DOT PUSH LBRAC CHAR RBRAC
    (25) list_push -> . NAME DOT PUSH LBRAC STRING RBRAC
    (26) list_push -> . NAME DOT PUSH LBRAC BOOL RBRAC
    (27) list_slice -> . NAME DOT SLICE LBRAC sliceval RBRAC
    (32) list_index -> . NAME DOT INDEX LBRAC INT RBRAC

    MINUS           shift and go to state 10
    LBRAC           shift and go to state 12
    NOT             shift and go to state 13
    NAME            shift and go to state 50
    BOOL            shift and go to state 15
    CHAR            shift and go to state 16
    STRING          shift and go to state 17
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
